--- a/app/package.json
+++ b/app/package.json
@@ -50,6 +50,7 @@
     ]
   },
   "devDependencies": {
-    "@types/axios": "^0.14.0"
+    "@types/axios": "^0.14.0",
+    "prettier": "3.2.5"
   }
 }
